--- a/assets/CSS/Style.css
+++ b/assets/CSS/Style.css
@@ -11,6 +11,7 @@ body
     align-items: center;
     justify-content: center;
     padding-top: 1%;
+    position: relative;
 }
 .Front
 {
@@ -28,6 +29,13 @@ body
     width: 75%;
     -webkit-user-select: none;
     user-select: none;
+}
+@keyframes move {
+    0%{transform: translateX(0%)}
+    25%{transform: translateX(10%)}
+    50%{transform: translateX(-10%)}
+    75%{transform: translateX(10%)}
+    100%{transform: translateX(0%)}
 }
 /*this is for Fname*/
 
@@ -205,4 +213,37 @@ body
 .Submit:active
 {
     background-color: #39ff13;
+}
+.Person-table
+{
+    border-collapse: collapse;
+    width: 100%;
+
+}
+
+.Back-list
+{
+    position: absolute;
+    width: 100%;
+    top: 60%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.Front-list
+{
+width: 100%;
+}
+
+.Tag-list
+{
+    text-align: center;
+}
+.Tag-list th
+{
+
+    border: 1px solid black;
+    background-color: #858684;
+    font-family: Vazir, sans-serif;
+    width: 14%;
 }
