--- a/assets/CSS/Style.css
+++ b/assets/CSS/Style.css
@@ -215,6 +215,38 @@ body
     background-color: #39ff13;
 }
 
+/* This is for Search */
+
+.Search-Back
+{
+    width: 64%;
+    position: relative;
+    margin-top: 4%;
+}
+
+.label-Search
+{
+    background-color: white;
+    z-index: 1;
+    font-size: 15px;
+    top: -25%;
+    right: 6%;
+    position: absolute;
+    font-family: Vazir, sans-serif;
+}
+
+.Search-input{
+    resize: none;
+    width: 100%;
+    height: 50px;
+    border: 1px solid #afaaaa;
+    background-color: transparent;
+    border-radius: 5px;
+    text-align: center;
+    font-family: Vazir, sans-serif;
+    outline: none;
+}
+
 
 /* This is for Table tag */
 .Person-table
@@ -227,7 +259,7 @@ body
 {
     position: absolute;
     width: 100%;
-    top: 60%;
+    top: 75%;
     justify-content: center;
     align-items: center;
     display: flex;
